# lgx

./: CMakeLists.txt  Cargo.toml  README.md  todo.md
.github/workflows/: flatpak-reusable.yml  flatpak.yml  release.yml
ci/: build-linux-vcpkg.sh
cmake/: LgxFetch.cmake
crates/app/: Cargo.toml
crates/app/src/: main.rs  windowed_model.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/engine/: Cargo.toml
crates/engine/src/: lib.rs  metrics.rs
crates/logsim/: Cargo.toml
crates/logsim/src/: main.rs
crates/parsing/: Cargo.toml
crates/parsing/src/: lib.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs
crates/source-api/: Cargo.toml
crates/source-api/src/: lib.rs
crates/sources/docker/: Cargo.toml
crates/sources/docker/src/: lib.rs
crates/sources/file/: Cargo.toml
crates/sources/file/src/: lib.rs
crates/ui/: Cargo.toml  build.rs
crates/ui/ui/: main.slint
doc/: product-spec.md
doc/design/: core-data-model.md  milestones.md  project.md
flatpak/: eu.lastviking.lgx.desktop  eu.lastviking.lgx.metainfo.xml  eu.lastviking.lgx.metainfo.xml.in  eu.lastviking.lgx.yaml  io.github.jgaa.lgx.desktop  io.github.jgaa.lgx.metainfo.xml  io.github.jgaa.lgx.yaml
src/app/: CMakeLists.txt  Main.qml  main.cpp
src/app/qml/: AboutDialog.qml  AdbSettings.qml  ColorSettings.qml  DialogHelper.js  FilterView.qml  GeneralSettings.qml  LogLineList.qml  LogView.qml  LogWorkspace.qml  LoggingSettings.qml  MarkedView.qml  PreferencesDialog.qml
src/app/qml/components/: LineMarkButton.qml  PaneMenuButton.qml  SymbolToolButton.qml
src/app/qml/icons/tabler/: LICENSE.txt
src/lib/: AdbCandidatesModel.cpp  AdbCandidatesModel.h  AdbDevicesModel.cpp  AdbDevicesModel.h  AppEngine.cpp  AppEngine.h  AppInfo.cpp  AppInfo.h  CMakeLists.txt  DockerContainersModel.cpp  DockerContainersModel.h  FileMonitor.cpp  FileMonitor.h  FileSource.cpp  FileSource.h  FilterModel.cpp  FilterModel.h  LogModel.cpp  LogModel.h  LogScanner.cpp  LogScanner.h  LogSource.cpp  LogSource.h  LogTypes.h  MarkedModel.cpp  MarkedModel.h  OpenLogsModel.cpp  OpenLogsModel.h  PageCache.cpp  PageCache.h  RecentLogsModel.cpp  RecentLogsModel.h  StreamSource.cpp  StreamSource.h  UiSettings.cpp  UiSettings.h  logging.cpp  logging.h  util.cpp  util.h
tests/functional/: CMakeLists.txt
tests/unit/: CMakeLists.txt  app_engine_tests.cpp  file_source_tests.cpp  filter_model_tests.cpp  main.cpp  page_cache_tests.cpp  util_tests.cpp
